Polish docs for a student-jar workflow
README is rewritten around the actual student use case: clone the repo,
drop sim4da.jar onto your own project's module path, write your first
node. The previous version assumed the reader was building sim4da itself
with ./gradlew, which is now an opt-in side note rather than the primary
path.

FIRST_SIMULATION.md is reframed as a guided walkthrough you can follow
either by reading the in-repo example or by pasting the snippets into
your own project; the "Running it" section covers both.

VERDICT.md and TODO.md move under docs/ to keep the repo root focused on
the student-facing pair (README + FIRST_SIMULATION). VERDICT gains a
historical-context preamble so first-time readers do not mistake it for
the current API. TODO.md is renamed to ROADMAP.md and reframed for
public eyes — what is coming next, with a note that nothing on it is
required for the current exercises.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>