@@ -2,26 +2,41 @@
 
 **A Java framework for simulating distributed algorithms — built for teaching, scaled to be fun.**
 
-Define your algorithm as an Actor that extends `Node` (or owns a
-`NetworkConnection`); declare a few records implementing `Message`; write your
-`engage()` loop in modern pattern-matching style. That's the whole framework.
+You define your algorithm as an Actor that extends `Node` (or owns a
+`NetworkConnection`), declare a few records implementing `Message`, and write
+your `engage()` loop in modern pattern-matching style. That's the whole
+framework.
 
 ## Quick start
 
-Targets Java 25. Build and run the test suite:
+sim4da ships as a single, zero-dependency JAR. There is nothing to install,
+nothing to download from Maven Central, no transitive footprint to manage.
 
-```
-./gradlew test
-```
+1. **Grab the JAR.** [`sim4da.jar`](sim4da.jar) lives at the root of this
+   repository. It targets **Java 25** (GraalVM 25 LTS or any other JDK 25
+   distribution).
+2. **Drop it on your project's module path** — for example, place it in a
+   `lib/` folder inside your own exercise project.
+3. **Add it to your build.** With Gradle:
+   ```kotlin
+   dependencies {
+       implementation(files("lib/sim4da.jar"))
+   }
+   java {
+       toolchain { languageVersion = JavaLanguageVersion.of(25) }
+   }
+   ```
+   With Maven, declare the JAR as a `system` dependency or install it into
+   your local repository. From the command line:
+   ```
+   javac --module-path lib --add-modules org.oxoo2a.sim4da -d out MyDemo.java
+   java  --module-path lib:out -m my.module/my.pkg.MyDemo
+   ```
+4. **Write your first simulation.** A walkthrough is in
+   [FIRST_SIMULATION.md](FIRST_SIMULATION.md).
 
-Run a single example:
-
-```
-./gradlew test --tests OneRingToRuleThemAllTest
-```
-
-For a guided walkthrough of your first simulation, see
-[FIRST_SIMULATION.md](FIRST_SIMULATION.md).
+That is the entire onboarding. The rest of this README explains *what is
+in* the JAR.
 
 ## Core concepts
 
@@ -36,9 +51,9 @@ record EndMessage()      implements Message {}
 ```
 
 Records are immutable, so the simulator can hand the same instance to every
-recipient without defensive copying. (For records that carry mutable
-containers — lists, maps, arrays — see the deep-immutability note in the
-`Message` Javadoc.)
+recipient without defensive copying. (If you carry mutable containers —
+lists, maps, arrays — reinforce immutability in a compact constructor; see
+the `Message` Javadoc.)
 
 ### Actors implement `engage()`
 
@@ -107,8 +122,8 @@ class CustomActor {
 }
 ```
 
-`OneRingToRuleThemAllTest` mixes both: the `Coordinator` is HAS-A, the
-`RingSegment` is IS-A.
+The walkthrough mixes both: the `Coordinator` is HAS-A, the `RingSegment` is
+IS-A.
 
 ### Lifecycle
 
@@ -121,7 +136,7 @@ simulator.shutdown();          // resets framework state for the next run
 ```
 
 There is exactly one `Simulator` per program — singleton by design, because
-"one program = one simulation" matches how students reason about distributed
+"one program = one simulation" matches how one reasons about distributed
 systems.
 
 `Simulator.stop()` ends the simulation early — but only when called from
@@ -133,8 +148,8 @@ enforces this: a node thread that calls `stop()` gets an
 
 ## Logging
 
-Every send, receive, broadcast, and any algorithm-level event you record
-yourself appears as one line in `sim4da-<PID>.log` in the working
+Every send, every receive, every broadcast, and any algorithm-level event
+you record yourself appears as one line in `sim4da-<PID>.log` in the working
 directory. Format: `[<source>,<seq>] <event>`, where `seq` is a
 monotonically increasing per-source counter:
 
@@ -145,12 +160,12 @@ monotonically increasing per-source counter:
 [1,2] received from 0
 ```
 
-Reading one node's events in increasing `seq` order gives that node's
-local timeline. Cross-node order in the file is the JVM's commit
-order, deliberately *not* a global wall-clock time — distributed
-systems don't have one, and pretending otherwise would teach the wrong
-lesson. Causality between nodes has to be reconstructed from the
-messages themselves (or, when `BellTower` lands, from logical clocks).
+Reading one node's events in increasing `seq` order gives that node's local
+timeline. Cross-node order in the file is the JVM's commit order,
+deliberately *not* a global wall-clock time — distributed systems don't have
+one, and pretending otherwise would teach the wrong lesson. Causality
+between nodes has to be reconstructed from the messages themselves (or,
+when `BellTower` lands, from logical clocks).
 
 To record an event from inside `engage()`:
 
@@ -159,9 +174,9 @@ log("round " + r + " complete");
 ```
 
 The implementation lives in `internal.EventLog` — it does not pull in
-SLF4J, Logback, or any other logging framework. sim4da's logging needs
-are simple enough that a dependency-free implementation is the right
-fit, and it lets the framework distribute as a single, standalone JAR.
+SLF4J, Logback, or any other logging framework. sim4da's logging needs are
+simple enough that a dependency-free implementation is the right fit, and
+it lets the framework distribute as a single, standalone JAR.
 
 To run a simulation without producing a log file at all (smoke tests,
 performance experiments, anything where the file is just clutter):
@@ -172,8 +187,8 @@ simulator.disableLogging();    // call before creating nodes
 // ... build the simulation, run, shut down ...
 ```
 
-`disableLogging()` is reset by `shutdown()`, so a JUnit suite where
-one test runs silently and the next runs loud just works.
+`disableLogging()` is reset by `shutdown()`, so a JUnit suite where one
+test runs silently and the next runs loud just works.
 
 ## Modern Java in use
 
@@ -186,17 +201,36 @@ The framework leans on Java 21+ language features as a matter of design:
 - **`ReentrantLock` + `Condition`** for the per-node mailbox, with proper
   interrupt propagation.
 - **JPMS module** with `org.oxoo2a.sim4da` exported and
-  `org.oxoo2a.sim4da.internal` deliberately hidden. Student code cannot
+  `org.oxoo2a.sim4da.internal` deliberately hidden. Your code cannot
   import the simulation core — `import org.oxoo2a.sim4da.internal.Network;`
   is a compile error rather than a tempting shortcut.
 - **Zero non-JDK dependencies.** The whole framework is one ~20 KB JAR;
   no transitive deps, no fat-JAR machinery, drop it on your module path
   and go.
 
+## Building sim4da yourself
+
+You do not need to do this to *use* the framework — `sim4da.jar` at the
+repo root is the only artifact you need. But if you are curious about the
+internals, want to step through the framework in a debugger, or are
+contributing back to the project:
+
+```
+./gradlew test       # run the test suite
+./gradlew jar        # rebuild sim4da.jar into build/libs/
+```
+
+The Gradle wrapper checked in here pins the build to Gradle 9.x; the
+project itself has no non-JDK runtime dependencies (JUnit 5 is test-scope
+only).
+
 ## Further reading
 
-- [FIRST_SIMULATION.md](FIRST_SIMULATION.md) — guided walkthrough of the
-  token-ring example, line by line.
+- [FIRST_SIMULATION.md](FIRST_SIMULATION.md) — a guided walkthrough of the
+  token-ring example, line by line. Recommended next step.
 - Javadoc on `Message`, `Node`, `NetworkConnection`, `Simulator`.
-- [VERDICT.md](VERDICT.md) — review notes that drove the recent
-  modernization (historical context for what changed and why).
+- [docs/ROADMAP.md](docs/ROADMAP.md) — what is being designed next:
+  `Topology`, `BellTower` (logical clocks), per-node `HostClock`.
+- [docs/VERDICT.md](docs/VERDICT.md) — the code review that drove the
+  current shape of the framework. Optional reading; useful if you want
+  to see what changed and why.
